@@ -1,5 +1,6 @@
 2006-03-30  Brian Matherly  <pez4brian@users.sourceforge.net>
 	* src/plugins/GraphViz.py: import const
+	* src/plugins/DecendReport.py: use full dates instead of just year.
 
 2006-03-30  Don Allingham  <don@gramps-project.org>
 	* src/Editors/_EditFamily.py: add surname guessing back in
